--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mantine/core": "^4.1.2",
+    "@mantine/form": "^4.1.5",
     "@mantine/hooks": "^4.1.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
@@ -14,6 +15,7 @@
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "tabler-icons-react": "^1.46.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
